Outliner: Crash when deleting collections #53415

Closed
opened 2017-11-29 03:26:59 +01:00 by Danrae Pray · 8 comments

SysInfo: Windows 10, GTX 1070
branch: blender2.8

When adding a collection to a ViewLayer, the collection shows up as part of the "Master Collection" and also at the root level in the outliner. If you shift+select the collection both at the root-level and in the "Master Collection" hierarchy, then click delete, Blender crashes.

Steps to reproduce:

  1. Open Blender 2.8 w/ the default startup file loaded.
  2. Change the active view layer to "Viewport" since "RenderLayer" doesn't have the master collection showing in outliner...
  3. Add a new collection to the view layer. NOTE: you should see the "New Collection" show up at the root level in the outliner (same level as "Master Collection") and also as a child of the "Master Collection" hierarchy.
  4. Shift+select to select the "New Collection" in both places it is available in the outliner (at root level and also within the "Master Collection" hierarchy.
  5. Click the 'x' button to delete the collection w/ it selected in both places and blender should crash.

*Note that this can also be accomplished by simply linking in the same collection multiple times in the same view-layer, shift+selecting the same collection at least twice, and then trying to delete it in the outliner.

SysInfo: Windows 10, GTX 1070 branch: blender2.8 When adding a collection to a ViewLayer, the collection shows up as part of the "Master Collection" and also at the root level in the outliner. If you shift+select the collection both at the root-level and in the "Master Collection" hierarchy, then click delete, Blender crashes. Steps to reproduce: 1) Open Blender 2.8 w/ the default startup file loaded. 2) Change the active view layer to "Viewport" since "RenderLayer" doesn't have the master collection showing in outliner... 3) Add a new collection to the view layer. NOTE: you should see the "New Collection" show up at the *root* level in the outliner (same level as "Master Collection") and also as a child of the "Master Collection" hierarchy. 4) Shift+select to select the "New Collection" in both places it is available in the outliner (at root level and also within the "Master Collection" hierarchy. 5) Click the 'x' button to delete the collection w/ it selected in both places and blender should crash. *Note that this can also be accomplished by simply linking in the same collection multiple times in the same view-layer, shift+selecting the same collection at least twice, and then trying to delete it in the outliner.
Danrae Pray self-assigned this 2017-11-29 03:26:59 +01:00
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscribers: @spockTheGray-4, @JulianEisel, @dfelinto

Added subscribers: @spockTheGray-4, @JulianEisel, @dfelinto
Danrae Pray changed title from Crash when deleting collections to OUTLINER: Crash when deleting collections 2017-11-29 03:28:51 +01:00
Author

@JulianEisel @dfelinto hey guys :) tagged you both in this one b.c. it's at a bug at a minimum, but not sure if there is some design work needed here too.

What "should" be the expected behavior when the user selects the same collection twice in the outliner and tries to delete it? Right now we try to delete the same collection twice in this case and that is easy to fix if we actually do want it to delete the collection... but I was wondering if we should even show the same collection twice in the outliner in the first place?

If so, I'm just curious (for my own understanding) what is the value of this for the end-user (maybe just a simple example use-case could clarify)?

@JulianEisel @dfelinto hey guys :) tagged you both in this one b.c. it's at a bug at a minimum, but not sure if there is some design work needed here too. What "should" be the expected behavior when the user selects the same collection twice in the outliner and tries to delete it? Right now we try to delete the same collection twice in this case and that is easy to fix if we actually do want it to delete the collection... but I was wondering if we should even show the same collection twice in the outliner in the first place? If so, I'm just curious (for my own understanding) what is the value of this for the end-user (maybe just a simple example use-case could clarify)?
Danrae Pray changed title from OUTLINER: Crash when deleting collections to Outliner: Crash when deleting collections 2017-11-29 04:06:12 +01:00
Author

The other thing that confuses me is that we can link the same collection multiple times in the same view-layer. This is another way this bug can be triggered, but again, does the user really benefit from linking in the same collection multiple times in a particular view-layer?

The other thing that confuses me is that we can link the *same* collection multiple times in the same view-layer. This is another way this bug can be triggered, but again, does the user really benefit from linking in the same collection multiple times in a particular view-layer?

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo
Author

Dropped a diff here to fix the crash - just let me know if it needs more work. Cheers o/

Dropped a diff here to fix the crash - just let me know if it needs more work. Cheers o/

This issue was referenced by 68fdcf07a1

This issue was referenced by 68fdcf07a1795d1c0b4c121286e28a9f0a57f05e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53415
No description provided.